<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FarmTech</string>
    <string name="heading_one">Welcome To Your FarmTech App!</string>
    <string name="heading_two">Innovative Farming Environment!</string>
    <string name="heading_three">Customized Guidance!</string>
    <string name="desc_one">Explore a new world of smart and sustainable agriculture with FarmTech.</string>
    <string name="desc_two">Explore the latest agriculture technologies and smart methods for cultivating your crops efficiently and effectively.</string>
    <string name="desc_three">Get guidance for your farm based on weather data and soil analysis to enhance productivity and increase yield.</string>
    <string name="default_web_client_id" translatable="false">1061727385355-hlokb0mi2gfhg05l9j5tbi7po0upkmoa.apps.googleusercontent.com</string>
    <string name="about">Agriculture plays an essential role in Algeria s economy. However, it faces challenges such as limited access to reliable data, inaccurate weather forecasts, and traditional farming practices. To address these specific needs of Algerian farmers, the FarmTech application has been developed using artificial intelligence. Before the advent of FarmTech, farmers primarily relied on their personal experience, advice from neighbors, and locally available information. However, these approaches had limitations in terms of accuracy, personalization, and efficiency. Other existing agricultural applications often lacked features specific to Algeria. FarmTech is an Android application specifically designed for farmers in Algeria. It allows farmers to select and manage their plots directly from the application. Through the analysis of agricultural field data, FarmTech provides personalized recommendations to optimize productivity and improve product quality.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="introduction">Start Your Agricultural Journey Now.</string>
    <string name="getStarted">Get Started</string>
    <string name="conditionaccount1">If you have an account!</string>
    <string name="conditionaccount2">Already have an account!</string>
    <string name="conditionaccount3">Don t have an account!</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="formulaire1">Create New Account!</string>
    <string name="formulaire2">Welcome Back!</string>
    <string name="title">Towards Sustainable Farming</string>
    <string name="usename">UserName</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="checkcondition">I agree to the terms and conditions.</string>
    <string name="buttonformulaire">Start Farming</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="humidity">Humidity</string>
    <string name="windspeed">Windspeed</string>
    <string name="myfields">My Fields</string>
    <string name="harvest">Harvest</string>
    <string name="accountdetails">Account Details</string>
    <string name="signout">Sign Out</string>
    <string name="farmer">Farmer</string>
    <string name="statiq">Statics</string>
    <string name="farmdetails">Farm Details</string>
    <string name="farmname">Farm Name</string>
    <string name="farmspace">Farm Space</string>
    <string name="croptype">Crop Type (Before)</string>
    <string name="soiltype">Soil Type</string>
    <string name="farmlocation">Farm Location</string>
    <string name="farmname1">Name</string>
    <string name="farmspace1">Space</string>
    <string name="croptype1">Crop</string>
    <string name="soiltype1">Soil</string>
    <string name="farmlocation1">Location</string>
    <string name="recommandation">Recommendations</string>
    <string name="setting">Settings</string>
    <string name="notification">Notifications</string>
    <string name="langue">Languages</string>
    <string name="accountsetting">Account Settings</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="aboutt">About</string>
    <string name="englais">English</string>
    <string name="francais">French</string>
    <string name="arabic">Arabic</string>
    <string name="support1">Email Support :</string>
    <string name="support2">If you need assistance or have any inquiries, you can contact us via email.</string>
    <string name="support3">Send an email</string>
    <string name="faq1">What sets FarmTech apart from other agricultural applications?</string>
    <string name="faq2">FarmTech is specifically designed for Algerian farmers, allowing them to directly manage their plots through the app and providing features tailored to the needs of the Algerian agricultural context.</string>
    <string name="faq3">How can I use FarmTech to optimize productivity and improve product quality?</string>
    <string name="faq4">FarmTech enables users to select and manage their plots within the app and offers personalized recommendations to optimize productivity and enhance product quality based on field data analysis.</string>
    <string name="faq5">Is FarmTech suitable for all types of farming practices in Algeria?</string>
    <string name="faq6">FarmTech is designed to cater to a wide range of farming practices prevalent in Algeria. Users are encouraged to explore the app s features to determine its suitability for their specific needs.</string>
    <string name="faq7">Can FarmTech be used offline?</string>
    <string name="faq8">Yes, FarmTech offers offline functionality for basic features. However, certain advanced features, such as real-time data analysis and updates, require an internet connection.</string>
    <string name="longe1">Select a language:</string>
    <string name="about1">Our vision:</string>
    <string name="home1">Home</string>
    <string name="or">Or</string>
    <string name="soil">Scan Soil</string>
    <string name="soil1">Discover your soil type!</string>
    <string name="soil2">Classified as:</string>
    <string name="soil3">Confidences:</string>
    <string name="soil4">Take Picture</string>
    <string name="soil5">Upload Picture</string>
    <string name="not1">No Notifications Yet</string>
    <string name="not2">We d let you know when we have news for you</string>
    <string name="googl">Google</string>
    <string name="version">Version 1.0</string>
    <string name="welcome_notification">Welcome to the FarmTech app!</string>
</resources>