<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".scansoil">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:fontFamily="@font/alice"
        android:text="@string/soil"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="-30dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/baseline_arrow_back_24" />
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soil1"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:fontFamily="@font/abril_fatface"
        android:layout_marginTop="70dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@drawable/farmadd"
        android:elevation="8dp"
      android:scaleType="centerCrop"
        android:contentDescription="Image to be classified"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/classifiedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soil2"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:fontFamily="@font/alice"
       android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/alice"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/confidencesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soil3"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/alice"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/confidencesResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/takePictureButton"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/soil4"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:fontFamily="@font/alice"
        android:background="@drawable/frame_border2"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/apploadPictureButton"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/soil5"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:fontFamily="@font/alice"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:background="@drawable/frame_border2"/>
</LinearLayout>