<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".support">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alice"
        android:text="@string/support"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/baseline_arrow_back_24" />


        <TextView
            android:id="@+id/support_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support1"
            android:textSize="20sp"
           android:fontFamily="@font/abril_fatface"
            android:textColor="@color/black"
            android:layout_marginTop="150dp"
            android:layout_marginStart="20dp"
             />

        <TextView
            android:id="@+id/support_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support2"
            android:layout_below="@id/support_header"
            android:textSize="18sp"
            android:fontFamily="@font/alice"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
             />

        <Button
            android:id="@+id/email_support_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/support3"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/support_description"
            android:fontFamily="@font/alice"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/round_btn"
            />


</RelativeLayout>