<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about">
    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alice"
            android:text="@string/aboutt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/baseline_arrow_back_24" />
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/about1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/abril_fatface"
         />
        <LinearLayout
            android:id="@+id/faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:background="@drawable/frameprofile"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/alice"

                />

        </LinearLayout>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_below="@+id/faq"
            android:layout_centerHorizontal="true"
            android:text="@string/version"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/alice"

            />

</RelativeLayout>
</ScrollView>